compiler/src/test/resources/golden/errors/lex_empty_interp.dawn
pub fn main() -> Unit !io =
  println("value: ${}")
